<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:gravity="top|center">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:gravity="start|center"
                android:background="@color/colorPrimary">

                <ImageView
                    android:src="@drawable/main_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_ip"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorTextEnabled"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="15dp">

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_height="match_parent"
                        android:layout_width="fill_parent"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_height="wrap_content"
                            android:layout_width="fill_parent"
                            app:cardBackgroundColor="@color/colorPrimary"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_height="wrap_content"
                                android:layout_width="fill_parent"
                                android:orientation="vertical"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:paddingBottom="10dp"
                                android:paddingTop="10dp">

                                <LinearLayout
                                    android:layout_height="wrap_content"
                                    android:layout_width="fill_parent"
                                    android:orientation="horizontal"
                                    android:gravity="start|center">

                                    <TextView
                                        android:layout_height="wrap_content"
                                        android:layout_width="wrap_content"
                                        android:text="@string/ip"
                                        android:layout_marginEnd="10dp"
                                        android:textColor="@color/colorTextEnabled"
                                        android:textStyle="bold"
                                        android:textSize="15sp"
                                        android:gravity="center"
                                        tools:ignore="HardcodedText" />

                                    <TextView
                                        android:textColor="@color/colorTextEnabled"
                                        android:id="@+id/TextView4"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentTop="true"
                                        android:layout_centerHorizontal="true"
                                        android:layout_gravity="center"
                                        android:textSize="20sp"
                                        android:gravity="center"/>

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_height="wrap_content"
                                    android:layout_width="fill_parent"
                                    android:orientation="horizontal"
                                    android:layout_marginTop="10dp">

                                    <TextView
                                        android:id="@+id/Ipd"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/isp"
                                        android:layout_marginEnd="10dp"
                                        android:textColor="@color/colorTextEnabled"
                                        android:textStyle="bold"
                                        android:textSize="15sp"
                                        android:gravity="center"
                                        tools:ignore="HardcodedText" />

                                    <TextView
                                        android:layout_height="wrap_content"
                                        android:layout_width="wrap_content"
                                        android:id="@+id/Txisp"
                                        android:textColor="@color/colorTextEnabled"
                                        android:textSize="15sp"
                                        android:gravity="center"/>

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_height="wrap_content"
                                    android:layout_width="fill_parent"
                                    android:orientation="horizontal"
                                    android:layout_marginTop="10dp">

                                    <TextView
                                        android:textColor="@color/colorTextEnabled"
                                        android:layout_height="wrap_content"
                                        android:layout_width="wrap_content"
                                        android:text="@string/country"
                                        android:layout_marginEnd="10dp"
                                        android:id="@+id/TextView8"
                                        android:textStyle="bold"
                                        android:textSize="15sp"
                                        android:gravity="center"
                                        tools:ignore="HardcodedText" />

                                    <TextView
                                        android:textColor="@color/colorTextEnabled"
                                        android:layout_height="wrap_content"
                                        android:layout_width="wrap_content"
                                        android:id="@+id/Txcountry"
                                        android:textSize="15sp"
                                        android:gravity="center"/>

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_height="wrap_content"
                                    android:layout_width="fill_parent"
                                    android:orientation="horizontal"
                                    android:layout_marginTop="10dp">

                                    <TextView
                                        android:textColor="@color/colorTextEnabled"
                                        android:layout_height="wrap_content"
                                        android:layout_width="wrap_content"
                                        android:text="@string/state"
                                        android:layout_marginEnd="10dp"
                                        android:id="@+id/TextView9"
                                        android:textStyle="bold"
                                        android:textSize="15sp"
                                        android:gravity="center"
                                        tools:ignore="HardcodedText" />

                                    <TextView
                                        android:textColor="@color/colorTextEnabled"
                                        android:layout_height="wrap_content"
                                        android:layout_width="wrap_content"
                                        android:id="@+id/Txstate"
                                        android:textSize="15sp"
                                        android:gravity="center"/>

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_height="wrap_content"
                                    android:layout_width="fill_parent"
                                    android:orientation="horizontal"
                                    android:layout_marginTop="10dp">

                                    <TextView
                                        android:textColor="@color/colorTextEnabled"
                                        android:layout_height="wrap_content"
                                        android:layout_width="wrap_content"
                                        android:text="@string/city"
                                        android:layout_marginEnd="10dp"
                                        android:id="@+id/TextView10"
                                        android:textStyle="bold"
                                        android:textSize="15sp"
                                        android:gravity="center"
                                        tools:ignore="HardcodedText" />

                                    <TextView
                                        android:textColor="@color/colorTextEnabled"
                                        android:layout_height="wrap_content"
                                        android:layout_width="wrap_content"
                                        android:id="@+id/Txcity"
                                        android:textSize="15sp"
                                        android:gravity="center"/>

                                </LinearLayout>

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>

